Initial view ready.

--- a/helpseeking/templates/helpseeking/task_list.html
+++ b/helpseeking/templates/helpseeking/task_list.html
@@ -12,11 +12,11 @@
             <h2>Diary Study Instructions</h2>
             <div class="row content col-sm-12">
                 
-            	<p>During the In-Lab session, we installed the Fusion 360 application on your system. For this part of the study, we want to go through the same task, but this time in a comfortable environment of your choice where no one will be watching you!</p>
-            	<p>As the researcher explained to you earlier, you are given 5 take-home tasks. You have to choose <strong>at least 2 </strong> of these tasks and work on them for <strong> at least 2 hours</strong>, with <strong>at least 4</strong> help-seeking episodes (use of any help resource), over a period of <strong>5 days</strong>, during which we will send you <em>daily</em> survey questions. You are required to record any successful/unsuccessful incident in the online survey or write them down on the Printed Eureka slips which were handed out to you in the in-lab study session.<</p>
+            	<p>During the In-Lab session, we installed the Fusion 360 application on your system. For this part of the study, we want you to go through similar tasks, but this time in a comfortable environment of your choice where no one will be watching you!</p>
+            	<p>As the researcher explained to you earlier, you are given 5 take-home tasks. You have to choose <strong>at least 2 </strong> of these tasks and work on them for <strong> at least 2 hours</strong>, with <strong>at least 4</strong> help-seeking episodes (use of any help resource), over a period of <strong>5 days</strong>, during which we will send you <em>daily</em> survey questions. You are required to record any successful/unsuccessful incident in the online survey or write them down on the Printed Eureka slips which were handed out to you in the in-lab study session.</p>
             	<p>You are free to use any online resource that you may wish but you <strong>should not </strong> ask help in-person from anyone.</p>
-            	<p>Once again we should mention that we are only testing the tool, not you. The tasks are designed to be challenging and we don't expect you to finish them. We just want to see how you engge with help resources. </p>
-            	<p>After 5 day we will get in touch with you to schedule the final interview session. You should bring your laptop with you for that part of the session as well as the printed Eureka slips.</p>
+            	<p>Once again we should mention that we are only testing the tool, not you. The tasks are designed to be challenging and we don't expect you to finish them. We just want to see how you engage with help resources. </p>
+            	<p>After 5 day we will get in touch with you to schedule the final <em>interview</em> session. You should bring your laptop with you for that part of the session as well as the printed Eureka slips.</p>
             	<p>You can find the detailed list of tasks and specifications in the following table: </p>
             </div>
             <h2>Tasks</h2>
